--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>测试</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body>
-        你好，碧海连天
-    </body>
+	<body>
+        测试
+	</body>
 </html>
